syntax = "proto3";
package phone;

import "protobuf/phone/phone.proto";

option go_package = "github.com/rickypai/web-template/api/protobuf/phone";

service PhoneReader {
  rpc GetOneByID(GetOneByIDRequest) returns (GetOneByIDResponse) {}
  rpc GetManyByIDs(GetManyByIDsRequest) returns (GetManyByIDsResponse) {}
  rpc ListByCursor(ListByCursorRequest) returns (ListByCursorResponse) {}
  rpc ListByPage(ListByPageRequest) returns (ListByPageResponse) {}
}

message GetOneByIDRequest {
  int64 id = 1;
}

message GetOneByIDResponse {
  phone.Phone result = 1;
}

message GetManyByIDsRequest {
  repeated int64 ids = 1;
}

message GetManyByIDsResponse {
  repeated phone.Phone results = 1;
}

message ListByCursorRequest {
  int64 cursor = 1;

  int64 count = 2; // defaults to 20
}

message ListByCursorResponse {
  repeated phone.Phone results = 1;

  int64 cursor = 2;
}

message ListByPageRequest {
  int64 page = 1;

  int64 size = 2; // defaults to 20
}

message ListByPageResponse {
  repeated phone.Phone results = 1;

  int64 next_page = 2;

  int64 total_pages = 3;

  bool has_next = 4;
}
